--- a/assets/styles.css
+++ b/assets/styles.css
@@ -12,8 +12,12 @@ body {
   padding-right: 0;
 }
 
-.nav-link {
+.navtop {
   color: #bab8b8 !important;
+}
+
+.nav-link {
+  color: #252323 !important;
 }
 
 .img-navbar {
